renaming again and asset interface

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     {
         "psr-4":
         {
-            "AssetsWrapper\\": "src/"
+            "Assets\\": "src/"
         }
     },
     "require":
